# square-sums

./: Cargo.toml  Main.hs  index.html  main.rs  package-lock.json  package.json  square-sums.cabal
src/: data.js  index.js
