[package]
name = "squares-problem"
version = "0.1.0"
authors = ["Max Taldykin <jorpic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = "0.6"
lazy_static = "1.4.0"

[[bin]]
name = "squares-problem"
path = "main.rs"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
