name:                square-sums
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Max Taldykin
maintainer:          jorpic@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable squares-problem
  main-is:             Main.hs
  ghc-options: -O3
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.13 && <4.14, containers >=0.6 && <0.7
  -- hs-source-dirs:
  default-language:    Haskell2010
